--- a/svelte/package.json
+++ b/svelte/package.json
@@ -13,8 +13,12 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.27.4",
+		"autoprefixer": "^10.4.16",
+		"daisyui": "^4.4.17",
+		"postcss": "^8.4.32",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
