show basic and ugly image list

--- a/svelte/package.json
+++ b/svelte/package.json
@@ -23,5 +23,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dayjs": "^1.11.10"
+	}
 }
