--- a/svelte/package.json
+++ b/svelte/package.json
@@ -15,9 +15,11 @@
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.4",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@types/node": "^20.11.28",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.22",
     "postcss": "^8.4.32",
+    "sass": "^1.72.0",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "tailwindcss": "^3.4.0",
