--- a/svelte/package.json
+++ b/svelte/package.json
@@ -11,13 +11,16 @@
     "extract": "svelte-i18n extract './src/**/*.svelte' ./src/i18n/zh-CN.json && svelte-i18n extract './src/**/*.svelte' ./src/i18n/en-US.json"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@sveltejs/adapter-auto": "^3.0.1",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.4",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@types/node": "^20.11.28",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.22",
+    "dexie": "4.0.1-beta.14",
     "postcss": "^8.4.32",
     "sass": "^1.72.0",
     "svelte": "^4.2.8",
@@ -25,6 +28,7 @@
     "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
     "vite": "^5.0.10"
   },
   "type": "module",
