--- a/svelte/package.json
+++ b/svelte/package.json
@@ -17,11 +17,13 @@
     "@sveltejs/kit": "^2.0.4",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@types/node": "^20.11.28",
+    "@types/pubsub-js": "^1.8.6",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.22",
     "dexie": "4.0.1-beta.14",
     "postcss": "^8.4.32",
+    "pubsub-js": "^1.9.4",
     "sass": "^1.72.0",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
