--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "comfyui-browser"
-description = ""
+description = "This is an image/video/workflow browser and manager for ComfyUI. You could add image/video/workflow to collections and load it to ComfyUI. You will be able to use your collections everywhere."
 version = "1.0.0"
 license = "LICENSE"
 dependencies = ["tqdm", "pandas", "numpy", "requests", "urllib3"]
